--- a/Food Finder/Views/Base.lproj/Main.storyboard
+++ b/Food Finder/Views/Base.lproj/Main.storyboard
@@ -19,16 +19,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Four Barrel Coffee" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sg-8I-k3w">
-                                <rect key="frame" x="79.000000000000014" y="514.33333333333337" width="217.33333333333337" height="33.666666666666629"/>
+                                <rect key="frame" x="79.000000000000014" y="500.66666666666669" width="217.33333333333337" height="33.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ty0-Cv-aeJ">
-                                <rect key="frame" x="10" y="678.66666666666663" width="355" height="43"/>
+                                <rect key="frame" x="16" y="665" width="343" height="54"/>
                                 <color key="backgroundColor" red="1" green="0.22949634569999999" blue="0.032463684030000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="43" id="MYD-2a-N7m"/>
+                                    <constraint firstAttribute="height" constant="54" id="MYD-2a-N7m"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal">
@@ -47,11 +47,11 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Ggs-SX-jCD" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="87.999999999999972" width="375" height="426.33333333333326"/>
+                                <rect key="frame" x="0.0" y="88.000000000000028" width="375" height="412.66666666666674"/>
                                 <gestureRecognizers/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="large_0" translatesAutoresizingMaskIntoConstraints="NO" id="ofo-94-zGX">
-                                <rect key="frame" x="121.66666666666669" y="640.66666666666663" width="132" height="30.666666666666629"/>
+                                <rect key="frame" x="121.66666666666669" y="627" width="132" height="30.666666666666629"/>
                             </imageView>
                             <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="n7x-K8-8oO">
                                 <rect key="frame" x="10" y="98" width="355" height="30"/>
@@ -100,13 +100,13 @@
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="375 Valencia St" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRK-E4-ILX">
-                                <rect key="frame" x="103" y="556" width="169" height="30"/>
+                                <rect key="frame" x="103" y="542.33333333333337" width="169" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="bJg-BF-2ii">
-                                <rect key="frame" x="98" y="592.33333333333337" width="179" height="42"/>
+                                <rect key="frame" x="98" y="578.66666666666663" width="179" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="(647) 975-1430">
                                     <color key="titleColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -116,7 +116,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gry-IR-r2G">
-                                <rect key="frame" x="261.66666666666669" y="640.33333333333337" width="88.333333333333314" height="30.333333333333371"/>
+                                <rect key="frame" x="261.66666666666669" y="626.66666666666663" width="88.333333333333314" height="30.333333333333371"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
@@ -150,15 +150,15 @@
                             <constraint firstItem="bJg-BF-2ii" firstAttribute="centerX" secondItem="kRK-E4-ILX" secondAttribute="centerX" id="RWM-Aj-4qX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gry-IR-r2G" secondAttribute="trailing" constant="25" id="Vp6-6e-C5i"/>
                             <constraint firstItem="Xx3-we-i9L" firstAttribute="top" secondItem="jYN-fS-ZZC" secondAttribute="bottom" constant="5" id="Zum-i3-LgB"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ty0-Cv-aeJ" secondAttribute="trailing" constant="10" id="ajN-56-VbX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ty0-Cv-aeJ" secondAttribute="trailing" constant="16" id="ajN-56-VbX"/>
                             <constraint firstItem="6sg-8I-k3w" firstAttribute="top" secondItem="Ggs-SX-jCD" secondAttribute="bottom" id="cWQ-dv-Ppf"/>
-                            <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="fJG-hR-rud"/>
+                            <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="fJG-hR-rud"/>
                             <constraint firstItem="jYN-fS-ZZC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="fc0-Nd-UqW"/>
                             <constraint firstItem="Xx3-we-i9L" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="gov-Va-oWg"/>
                             <constraint firstItem="Ggs-SX-jCD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="kOV-Vw-g2p"/>
                             <constraint firstItem="kRK-E4-ILX" firstAttribute="top" secondItem="6sg-8I-k3w" secondAttribute="bottom" constant="8" id="mNL-7a-Zih"/>
                             <constraint firstItem="jYN-fS-ZZC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mQU-J4-jRu"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ty0-Cv-aeJ" secondAttribute="bottom" constant="7.3399999999999999" id="seN-by-WHV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ty0-Cv-aeJ" secondAttribute="bottom" constant="10" id="seN-by-WHV"/>
                             <constraint firstItem="Ggs-SX-jCD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tHn-Uf-JRU"/>
                             <constraint firstItem="gry-IR-r2G" firstAttribute="leading" secondItem="ofo-94-zGX" secondAttribute="trailing" constant="8" id="twl-Vs-C3i"/>
                             <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="top" secondItem="ofo-94-zGX" secondAttribute="bottom" constant="7.3399999999999999" id="vgg-aV-Spn"/>
@@ -250,7 +250,7 @@
                                 </connections>
                             </collectionView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Krk-Gs-T0X">
-                                <rect key="frame" x="84" y="94" width="206" height="29"/>
+                                <rect key="frame" x="84" y="98" width="206" height="29"/>
                                 <segments>
                                     <segment title="First"/>
                                     <segment title="Second"/>
@@ -271,7 +271,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="89.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="JcT-c6-seN">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Address" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="JcT-c6-seN">
                                                     <rect key="frame" x="102" y="36" width="223" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
@@ -289,7 +289,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ynj-zB-030">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ynj-zB-030">
                                                     <rect key="frame" x="102" y="59" width="258" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
@@ -322,7 +322,7 @@
                                 </prototypes>
                             </tableView>
                             <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="c7z-Lr-DBE">
-                                <rect key="frame" x="0.0" y="122" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="126" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="gZk-Rh-bdi" id="b8R-oY-ISz"/>
@@ -332,7 +332,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="TIR-DC-Ncy" firstAttribute="trailing" secondItem="Krk-Gs-T0X" secondAttribute="trailing" constant="85" id="8Uj-wV-POl"/>
-                            <constraint firstItem="Krk-Gs-T0X" firstAttribute="top" secondItem="TIR-DC-Ncy" secondAttribute="top" constant="6" id="NoN-jw-o1B"/>
+                            <constraint firstItem="Krk-Gs-T0X" firstAttribute="top" secondItem="TIR-DC-Ncy" secondAttribute="top" constant="10" id="NoN-jw-o1B"/>
                             <constraint firstItem="Krk-Gs-T0X" firstAttribute="leading" secondItem="TIR-DC-Ncy" secondAttribute="leading" constant="84" id="QJm-s8-FL8"/>
                             <constraint firstItem="c7z-Lr-DBE" firstAttribute="top" secondItem="Krk-Gs-T0X" secondAttribute="bottom" id="bIz-ia-UaO"/>
                             <constraint firstItem="c7z-Lr-DBE" firstAttribute="trailing" secondItem="TIR-DC-Ncy" secondAttribute="trailing" id="jQ2-jF-HcZ"/>
@@ -699,7 +699,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="99.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tcq-JU-dZm">
+                                                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tcq-JU-dZm">
                                                     <rect key="frame" x="16" y="3" width="95" height="95"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="Tcq-JU-dZm" secondAttribute="height" multiplier="1:1" id="6yu-kD-JpM"/>
